@@ -220,6 +220,17 @@ const int     objcumber[NUMOFOBJECTS] = {
 	10, 8, 8, 10, 10, 3, 1, 2
 };
 
+const int objflags[NUMOFOBJECTS] = {
+	0, 0, 0, 0, 0, 0, 0, 0,
+	0, 0, 0, 0, 0, OBJ_PLURAL, 0, OBJ_PLURAL,
+	0, 0, 0, 0, 0, 0, 0, 0,
+	0, 0, 0, 0, OBJ_PLURAL, 0, 0, 0,
+	0, 0, 0, 0, OBJ_PLURAL, 0, 0, OBJ_PLURAL,
+	0, 0, OBJ_PLURAL, 0, 0, 0, 0, 0,
+	0, 0, 0, 0, 0, 0, 0, 0,
+	0, 0, 0, 0, 0, 0, 0, 0
+};
+
 int     win = 1;
 int     matchcount = 20;
 int     followgod = -1;
